Fix horizontal scrollbar appearing in drawer and content
Fixes #9

--- a/src/app/assets/stylesheets/application.css
+++ b/src/app/assets/stylesheets/application.css
@@ -23,7 +23,7 @@
 body {
     /* Remove margin */
     margin: 0;
-
+    overflow-x: hidden;
     font-family: 'Roboto', sans-serif;
 }
 
